Feat: UI components

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+p {
+  margin: 0;
+}
+
+.text-italic {
+  font-weight: 500;
+  font-style: italic;
+}
+
+.text-bolder {
+  font-weight: 700;
+}
+
+.App {
+  font-size: 14px;
 }
 
 .App-header {
@@ -13,20 +25,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: flex-start;
+
+  padding: 4rem 0 16rem 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* CONTENT */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.currency-content {
+  padding: 0 1rem;
+  min-height: 540px;
 }
